started implementing recommendations from practice talk

--- a/qual_presentation.tex
+++ b/qual_presentation.tex
@@ -52,7 +52,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}[plain]
 %THIS IS THE TITLE OF THE TALK
-\title{Title of Qualification Exam Talk}
+\title{BART\\\large{A new framework for developing and evaluating
+  acceleration schemes for the neutron transport equation}}
 
 %FEEL FREE TO EDIT THE COVER LAYOUT AS NEEDED
 \author{
@@ -81,20 +82,17 @@ J. S. Rehak\\
   \tableofcontents
 \end{frame}
 
-\section{Motivation}
-
 \section{\scshape Transport Equation}
 
 \frame[c]{\frametitle{Steady-state Boltzman Transport Equation}
 
   Our problem of interest is the time-independent transport equation
-  for a critical system on a domain of interest
-  $\rvec \in V$~\cite{lewis1993},
+  on a domain of interest $\rvec \in V$~\cite{lewis1993},
   
 \begin{align*}
   &\left[ \oh\cdot  \nabla + \Sigma_t(\rvec,E) \right] \psi(\rvec,E,\oh)\\
   & \quad \quad \quad= \int_0^{\infty}dE'\int_{4\pi}d\oh'\Sigma_s(\rvec, E'\rightarrow E,\oh'\rightarrow\oh)
-    \psi(\rvec,E',\oh') \\ & \quad \quad \quad+ Q(\rvec, E, \oh)\;,
+    \psi(\rvec,E',\oh') \\ & \quad \quad \quad+ Q(\psi, \rvec, E, \oh)\;,
 \end{align*}
 with a given boundary condition,
 \begin{align*}
@@ -103,7 +101,117 @@ with a given boundary condition,
 \end{align*}
 }
 
+\begin{frame}
+  \frametitle{Iterative Solving Method}
 
+  Assuming the source $Q$ is not a function of $\psi$,  we define the
+  source-iteration iterative scheme for iteration $i$,
+  \begin{align*}
+  &\left[ \oh\cdot  \nabla + \Sigma_t(\rvec,E) \right] \psi^{i+1}(\rvec,E,\oh)\\
+  & \quad \quad \quad= \int_0^{\infty}dE'\int_{4\pi}d\oh'\Sigma_s(\rvec, E'\rightarrow E,\oh'\rightarrow\oh)
+    \psi^{i}(\rvec,E',\oh') \\ & \quad \quad \quad+ Q(\rvec, E, \oh)\;,
+  \end{align*}
+  with the same boundary condition and initial condition
+  $\psi^0(\rvec, E, \oh)$.
+  
+\end{frame}
+
+
+
+\frame[c]{\frametitle{Fourier analysis}
+  To see how the error in our iterative schemes evolves, we can use
+  Fourier analysis~\cite{Adams2002}. To do so, we use a one-group, one
+  dimension, infinite homogeneous medium with isotropic scattering.
+  \begin{equation*}
+    \mu\frac{\partial}{\partial x}\psi(x, \mu) + \Sigma_t\psi(x, \mu)
+    = \frac{\Sigma_s}{2}\int_{-1}^{1}\psi(x, \mu')d\mu' +
+    \frac{Q}{2}\;.
+  \end{equation*}
+  We define the source iteration scheme as discussed above,
+  \begin{equation*}
+    \mu\frac{\partial}{\partial x}\psi^{k+1}(x, \mu) + \Sigma_t\psi^{k+1}(x, \mu) = \frac{\Sigma_s}{2}\int_{-1}^{1}\psi^k(x, \mu')d\mu' + \frac{Q}{2}\;.
+  \end{equation*}
+   and subtract the two to get an equation for the error in iteration
+   $k$, giving us a similar equation for the error in iteration $k+1$ as it
+   relates to the error in iteration $k$,
+   \begin{equation*}
+         \mu\frac{\partial}{\partial x}e^{k+1}(x, \mu) + \Sigma_te^{k+1}(x, \mu) = \frac{\Sigma_s}{2}\int_{-1}^{1}e^k(x, \mu')d\mu'\;.
+   \end{equation*}
+  \note{
+    \begin{itemize}
+    \item How can we be sure that source iteration will converge? What
+      controls the convergence rate? To determine this we can use a Fourier analysis.
+    \item We need to start with a lot of assumptions to get a very
+      simplified version of our transport equation.
+    \item We define what we mean by error, and get an equation that
+      relates the error in each step to the previous
+      step. Unsurprisingly it looks like our original equation,
+      because the evolution of the solution and the evolution of the
+      error are related.
+    \end{itemize}
+
+    }
+  }
+
+\frame[c]{\frametitle{Fourier Analysis}
+  To perform an inverse Fourier transform, we need to choose a
+  measure of spatial variation, an error ``wavelength.''
+  \pause
+  \begin{equation*}
+    \lambda = \frac{\ell}{n}, \quad \forall n \in \mathbb{R}
+    \implies \lwn = \frac{1}{\lambda} = \frac{n}{\ell} = n \cdot \Sigma_t
+  \end{equation*}
+  \pause
+    Perform an inverse Fourier transform,
+    \begin{equation*}
+      e^k(x, \mu) = \int_{-\infty}^{\infty}\hat{e}^k(n, \mu)e^{i\Sigma_t n x}dn\;.
+    \end{equation*}
+  \pause
+  After plugging into our equation for error and some rearranging,
+  \begin{equation*}
+    \int_{-1}^{1}\hat{e}^{k+1}(n, \mu)d\mu = \Lambda(n)\int_{-1}^{1}\hat{e}^{k}(n, \mu')d\mu'\;,
+  \end{equation*}
+  Where
+  \begin{equation*}
+    \Lambda(n) = \frac{\Sigma_s}{\Sigma_t}\cdot \frac{\tan^{-1}{(n)}}{n}\;.
+  \end{equation*}
+       
+    
+
+    \note{
+      \begin{itemize}
+      \item We can examine the modes of the spatial error by using an
+        inverse Fourier transform. This will give us an idea of how
+        the spatial frequencies of the error. We need to decide on an
+        error wavelength, which gives us a linear error
+        frequency. Higher $n$ means higher error frequency, with $n =
+        0$ being infinite wavelength, completely non-coupled error.
+      \item If we plug this back into our previous equation and do a
+        large amount of manipulation, we get a fairly simple
+        relationship between the integrated error in one step to the
+        integrated error in the previous step.
+      \item This lambda function is maximized when $n = 0$. The lowest
+        frequency error converges the slowest, and at a rate
+        proportional to $\Sigma_s/\Sigma_t$.
+      \end{itemize}
+      
+      }
+    }
+
+\frame[c]{\frametitle{Problem}
+
+\begin{block}{Problem Statement}
+In the presence of up-scattering and a substantial scattering
+cross-section, Gauss-Seidel source-iteration can converge arbitrarily
+slow because the error in diffuse, persistent modes after each iteration reduces by a factor of
+$\Sigma_s/\Sigma_t$.    
+\end{block}
+
+\note{ This motivates the development of acceleration schemes to speed
+  up this convergence. This is especially applicable to shielding
+  problems where scattering is dominant}
+  
+}
 
 \frame[c]{\frametitle{The multigroup $S_N$ equations}
   Apply the following discretizations:
@@ -145,7 +253,7 @@ with a given boundary condition,
     \end{itemize}
     }
   }
-
+  
 \frame[c]{\frametitle{Iterative Solving Methods}
   Expressed in operator form, this is
   \begin{align*}
@@ -171,7 +279,8 @@ with a given boundary condition,
     \note{
       \begin{itemize}
       \item M is the moment-to-discrete, D is the reverse
-      \item Important to note that the $G$-th energy group is the lowest.
+      \item Important to note that the $G$-th energy group is the
+        lowest.        
       \end{itemize}
       }     
     }
@@ -190,6 +299,9 @@ with a given boundary condition,
     \mat{L}_g\mat{\Psi}^{k+1}_g = \mat{M}\sum^{G}_{g' = 0}\left[\mat{S}_{g'  g}\mat{\Phi}^{0}_{g'}
     + \frac{1}{k}\mat{F}_{g'}\mat{\Phi}^{k}_{g'}\right]\;.
   \end{align*}
+  In general, to converge both the fission and scattering sources,
+    power iteration is paired with source iteration in an inner-outer
+    convergence scheme.
 }
 
 \frame[c]{
@@ -220,7 +332,6 @@ with a given boundary condition,
   \end{align*}
 }
 }
-
 \section{Acceleration Methods}
 
 \frame[c]{\frametitle{Nonlinear Diffusion Acceleration (NDA)}
@@ -310,101 +421,6 @@ low-order non-linear diffusion acceleration equation (LONDA),
     \end{itemize}
   }
 }
-
-\frame[c]{\frametitle{Fourier analysis}
-  To see how the error in our iterative schemes evolves, we can use
-  Fourier analysis~\cite{Adams2002}. To do so, we use a one-group, one
-  dimension, infinite homogeneous medium with isotropic scattering.
-  \begin{equation*}
-    \mu\frac{\partial}{\partial x}\psi(x, \mu) + \Sigma_t\psi(x, \mu)
-    = \frac{\Sigma_s}{2}\int_{-1}^{1}\psi(x, \mu')d\mu' +
-    \frac{Q}{2}\;.
-  \end{equation*}
-  We define the source iteration scheme as discussed above,
-  \begin{equation*}
-    \mu\frac{\partial}{\partial x}\psi^{k+1}(x, \mu) + \Sigma_t\psi^{k+1}(x, \mu) = \frac{\Sigma_s}{2}\int_{-1}^{1}\psi^k(x, \mu')d\mu' + \frac{Q}{2}\;.
-  \end{equation*}
-   and subtract the two to get an equation for the error in iteration
-   $k$, giving us a similar equation for the error in iteration $k+1$ as it
-   relates to the error in iteration $k$,
-   \begin{equation*}
-         \mu\frac{\partial}{\partial x}e^{k+1}(x, \mu) + \Sigma_te^{k+1}(x, \mu) = \frac{\Sigma_s}{2}\int_{-1}^{1}e^k(x, \mu')d\mu'\;.
-   \end{equation*}
-  \note{
-    \begin{itemize}
-    \item How can we be sure that source iteration will converge? What
-      controls the convergence rate? To determine this we can use a Fourier analysis.
-    \item We need to start with a lot of assumptions to get a very
-      simplified version of our transport equation.
-    \item We define what we mean by error, and get an equation that
-      relates the error in each step to the previous
-      step. Unsurprisingly it looks like our original equation,
-      because the evolution of the solution and the evolution of the
-      error are related.
-    \end{itemize}
-
-    }
-  }
-
-\frame[c]{\frametitle{Fourier Analysis}
-  To perform an inverse Fourier transform, we need to choose a
-  measure of spatial variation, an error ``wavelength.''
-  \pause
-  \begin{equation*}
-    \lambda = \frac{\ell}{n}, \quad \forall n \in \mathbb{R}
-    \implies \lwn = \frac{1}{\lambda} = \frac{n}{\ell} = n \cdot \Sigma_t
-  \end{equation*}
-  \pause
-    Perform an inverse Fourier transform,
-    \begin{equation*}
-      e^k(x, \mu) = \int_{-\infty}^{\infty}\hat{e}^k(n, \mu)e^{i\Sigma_t n x}dn\;.
-    \end{equation*}
-  \pause
-  After plugging into our equation for error and some rearranging,
-  \begin{equation*}
-    \int_{-1}^{1}\hat{e}^{k+1}(n, \mu)d\mu = \Lambda(n)\int_{-1}^{1}\hat{e}^{k}(n, \mu')d\mu'\;,
-  \end{equation*}
-  Where
-  \begin{equation*}
-    \Lambda(n) = \frac{\Sigma_s}{\Sigma_t}\cdot \frac{\tan^{-1}{(n)}}{n}\;.
-  \end{equation*}
-       
-    
-
-    \note{
-      \begin{itemize}
-      \item We can examine the modes of the spatial error by using an
-        inverse fourier transform. This will give us an idea of how
-        the spatial frequencies of the error. We need to decide on an
-        error wavelength, which gives us a linear error
-        frequency. Higher $n$ means higher error frequency, with $n =
-        0$ being infinite wavelength, completely non-coupled error.
-      \item If we plug this back into our previous equation and do a
-        large amount of manipulation, we get a fairly simple
-        relationship between the integrated error in one step to the
-        integrated error in the previous step.
-      \item This lambda function is maximized when $n = 0$. The lowest
-        frequency error converges the slowest, and at a rate
-        proportional to $\Sigma_s/\Sigma_t$.
-      \end{itemize}
-      
-      }
-    }
-
-\frame[c]{\frametitle{Problem}
-
-\begin{block}{Problem Statement}
-In the presence of up-scattering and a substantial scattering
-cross-section, Gauss-Seidel source-iteration can converge arbitrarily
-slow because the error in diffuse, persistent modes after each iteration reduces by a factor of
-$\Sigma_s/\Sigma_t$.    
-\end{block}
-
-\note{ This motivates the development of acceleration schemes to speed
-  up this convergence. This is especially applicable to shielding
-  problems where scattering is dominant}
-  
-}
     
 \frame[c]{\frametitle{Two-grid acceleration}
 
@@ -412,13 +428,13 @@ To mitigate this issue Adams and Morel~\cite{Adams1993} developed the
 two-grid method which rests on two assumptions:
 \begin{itemize}
 \item<1-> The persistent error modes can be accurately determined by a
-  course-grid approximation.
-\item<2-> Solving this course-grid approximation is more economical
+  coarse-grid approximation.
+\item<2-> Solving this coarse-grid approximation is more economical
   than solving the actual equation.
 \end{itemize}
 \onslide<3->{
 \begin{block}{Two-grid Acceleration}
-  Solve for the error using a course-grid approximation, and use it as
+  Solve for the error using a coarse-grid approximation, and use it as
   a correction to our solution in each step.
 \end{block}}
 
@@ -529,7 +545,7 @@ less work than our original method.
   \textit{actually} accelerating removing more error in less work, or
   just moving work around?
 
-  We can use fourier analysis like before, but things get complicated
+  We can use Fourier analysis like before, but things get complicated
   when we move into multidimensional problems, and start combining
   accelerating schemes. We need more insight into the acceleration process.
   }
@@ -553,7 +569,7 @@ less work than our original method.
     is a good indication, but not ideal. Is it proper to use clock
     time? CPU Time? How do we know that it's not faster because of
     better computer science. We not only need insight into the inner
-    workings of acelleration schemes, but we need to disaggregate the
+    workings of acceleration schemes, but we need to dis-aggregate the
     computer science from the mathematics.
   }
   
@@ -565,10 +581,10 @@ less work than our original method.
   schemes include:
   \begin{itemize}
   \item<1-> Our definition of work is based on assumptions about algorithm efficiency.
-  \item<2-> Combining or using complex acelleration schemes may invalidate
+  \item<2-> Combining or using complex acceleration schemes may invalidate
     these assumptions.
   \item<3-> Implementing new schemes can be complicated, making it
-    difficult to disaggregate implementation from theory. 
+    difficult to dis-aggregate implementation from theory. 
   \item<4-> It can be difficult to reproduce results when accelerated
     codes are not portable.
   \end{itemize}
@@ -631,25 +647,24 @@ less work than our original method.
     control solve.
   \item<3-> Makes the modifications \textit{portable}.    
   \item<4-> Enables us to compare the implementation of the method to
-    disaggregate the computer science from the method itself.
+    dis-aggregate the computer science from the method itself.
   \end{itemize}
  
 \end{frame}
 
 \begin{frame}
   \frametitle{Instrumentation}
-
-\onslide<1->{ 
   \begin{block}{Goal 2}
     Include tools to analyze the effectiveness of
     acceleration schemes.
-  \end{block}}
-
-\onslide<2->{BART will include the ability to \textit{instrument} different parts
+  \end{block}
+\pause
+BART will include the ability to \textit{instrument} different parts
   of the solve, to gather enough information to assess the
   effectiveness of acceleration schemes. Ideas for instrumentation
-  are:}
-\begin{itemize}[<3+->]
+  are:
+  \pause
+\begin{itemize}[<+->]
   \item Storage of solve parameters (eigenvalues, fluxes) at
     specified steps interval.    
   \item Storage of hierarchy of iterations.
@@ -676,13 +691,15 @@ less work than our original method.
 \end{frame}
 
 \begin{frame}
-  \frametitle{Modern C++}
+  \frametitle{Modern Coding Practices}
   \begin{block}{Goal 4}
     Utilize modern coding and tests practices to make it
     easier for users to develop and have confidence in their solutions.
   \end{block}
-  \begin{itemize}    
+  \begin{itemize}
   \item Build using the methods of modern \texttt{C++-14}.
+  \item Cross-sections have the capability of being stored in Google
+    Protocol Buffers.
   \item BART uses the \texttt{googletest} and \texttt{googlemock}
     libraries for unit testing. Unit testing coverage via \texttt{codecov}
   \item All dependencies for BART are built in an available Docker
@@ -702,7 +719,7 @@ less work than our original method.
   \item Interface for \hyperlink{SECOND_ORDER}{second-order} transport equation formulations
     using continuous finite element methods.
   \item Implementation of Diffusion.
-  \item Implementation of Self-adjoint angular flux equation.
+  \item Implementation of Self-Adjoint angular flux equation.
   \end{itemize}
   }
 
@@ -726,7 +743,7 @@ less work than our original method.
 }
 
 \begin{frame}
-  \frametitle{Project Deliverables}
+  \frametitle{Project Deliverable}
 
   \begin{enumerate}[<+->]
   \item A new \texttt{C++} code that solves the continuous
@@ -743,7 +760,7 @@ less work than our original method.
   \begin{itemize}[<+->]    
   \item Addition of Discontinuous-Galerkin Finite Element Formulations support
     to BART.\@
-  \item More acelleration methods implemented to test different combinations.
+  \item More acceleration methods implemented to test different combinations.
   \item Better or more complex \textit{in situ} analysis of acceleration efficiency.
   \item Automated acceleration control (adaptive acceleration).
   \end{itemize}
@@ -795,7 +812,7 @@ less work than our original method.
   \begin{itemize}
   \item Even/Odd-parity equations (EP).
   \item Weighted least-squared formulation (WLS).    
-  \item Self-adjoint angular flux (SAAF).
+  \item Self-Adjoint angular flux (SAAF).
   \end{itemize}
 
   With advantages and disadvantages compared to the standard
